# iam57-bot

./: .env  .gitignore  .pdm-python  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml
iam57_bot/plugins/nonebot_plugin_alist/: __init__.py
iam57_bot/plugins/nonebot_plugin_alist/api/: auth.py  fs.py
iam57_bot/plugins/nonebot_plugin_alist/api/admin/: task.py
iam57_bot/plugins/nonebot_plugin_alist/cmd/: __init__.py  alist_cmd.py
iam57_bot/plugins/nonebot_plugin_alist/cmd/account/: __init__.py  on_account_info.py  on_logout.py
iam57_bot/plugins/nonebot_plugin_alist/cmd/alist/: on_help.py
iam57_bot/plugins/nonebot_plugin_alist/cmd/download/: __init__.py  on_download_add.py
iam57_bot/plugins/nonebot_plugin_alist/cmd/fs/: __init__.py
iam57_bot/plugins/nonebot_plugin_alist/context/: alist_user.py
iam57_bot/plugins/nonebot_plugin_alist/enum/: offline_download.py
iam57_bot/plugins/nonebot_plugin_alist/message/: __init__.py  task.py
iam57_bot/plugins/nonebot_plugin_alist/util/: __init__.py  request.py
